# Uni-Excercises-JiTP2

./: .gitignore
asjdn/: CMakeLists.txt
zad1/: CMakeLists.txt  main.cpp  range.h
zad2/: CMakeLists.txt  range.h  zad_m2.cpp
zad3/: CMakeLists.txt  bad.txt  good.txt  zad_1.cpp
zad4/: CMakeLists.txt  tst_graph.cpp
zad4/graph_lib/: fltk.h
zad5/: CMakeLists.txt  figure.h  figure_test.cpp
zad5/graph_lib/: CMakeLists.txt  Graph.cpp
